--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "copy-webpack-plugin": "^5.0.1",
     "css-loader": "^2.1.0",
     "file-loader": "^3.0.1",
-    "html-webpack-plugin": "^3.2.0",
+    "html-webpack-plugin": "4",
     "node-sass": "^4.13.1",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
